Fix comment body overflow.

--- a/src/pages/comments/post/Comment.scss
+++ b/src/pages/comments/post/Comment.scss
@@ -29,7 +29,7 @@
 
 .content {
 	flex-direction: column;
-	max-width: calc(100% - 32px);
+	width: calc(100% - 32px);
 }
 
 .loadMore {
